Fixed smart search box alignment

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -183,3 +183,8 @@ span.twitter-typeahead{
     width: 96%;
     float:right;
 }
+
+.nav-search .form-control.typeahead {
+    width: 100%;
+    float: none;
+}
